[gd_scene load_steps=26 format=3 uid="uid://dqs5up6xt3yr2"]

[ext_resource type="Script" path="res://Scripts/other/Level_Base.gd" id="1_ud67y"]
[ext_resource type="Texture2D" uid="uid://daon7f1gf8ss2" path="res://Visual/Sprites/Backgrounds/bg2.png" id="2_biu23"]
[ext_resource type="PackedScene" uid="uid://dlh2vlug8qltd" path="res://Scenes/Other/progress_bar.tscn" id="3_cact6"]
[ext_resource type="PackedScene" uid="uid://d1n8xycy34w5" path="res://Scenes/Other/grow_progress_bar.tscn" id="4_7k25r"]
[ext_resource type="Texture2D" uid="uid://c4eimd1h21w1r" path="res://Visual/Sprites/UglyArrow.png" id="5_pmhgb"]
[ext_resource type="Script" path="res://Scripts/other/FlashingEffect.gd" id="6_n51mo"]
[ext_resource type="Shader" path="res://Visual/Shaders/LoaderShader.gdshader" id="7_0hvrg"]
[ext_resource type="Texture2D" uid="uid://bu5mt783frc2i" path="res://Visual/Sprites/Loader.png" id="8_bquj0"]
[ext_resource type="Texture2D" uid="uid://bgtfmf5t0yc84" path="res://Visual/Sprites/Titles.png" id="9_3u4yf"]
[ext_resource type="PackedScene" uid="uid://cujkhawkt2egg" path="res://Scenes/Player/player.tscn" id="9_gmrbk"]
[ext_resource type="PackedScene" uid="uid://beh82u6kyw1bt" path="res://Scenes/Enemies/Gorilla.tscn" id="10_dc7cp"]
[ext_resource type="Script" path="res://Scripts/other/PlayerCamera.gd" id="11_30gjy"]
[ext_resource type="PackedScene" uid="uid://wc8v1447wt3t" path="res://Scenes/Other/EnemyTitleAnimator.tscn" id="12_2w3it"]
[ext_resource type="AudioStream" uid="uid://cg5a1hfydakum" path="res://Sound/Sfx/Announcer/Gong/Gong_low2_v1.wav" id="14_x4213"]
[ext_resource type="AudioStream" uid="uid://crw2200houb4c" path="res://Sound/Sfx/Announcer/Gong/Gong_high1_v1.wav" id="15_v7h4m"]

[sub_resource type="Theme" id="Theme_7k74m"]

[sub_resource type="Theme" id="Theme_4tts6"]

[sub_resource type="Theme" id="Theme_1rxdi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_okhwt"]
resource_local_to_scene = true
shader = ExtResource("7_0hvrg")
shader_parameter/scale = 1.0
shader_parameter/mask = ExtResource("8_bquj0")

[sub_resource type="Animation" id="Animation_6vobu"]
resource_name = "FadeIn"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}

[sub_resource type="Animation" id="Animation_bmkxe"]
resource_name = "FadeOut"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}

[sub_resource type="Animation" id="Animation_ywmkn"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1t5nq"]
_data = {
"FadeIn": SubResource("Animation_6vobu"),
"FadeOut": SubResource("Animation_bmkxe"),
"RESET": SubResource("Animation_ywmkn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulv0b"]
size = Vector2(20, 19.4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_se114"]
size = Vector2(20, 162)

[node name="Fight2" type="Node2D" node_paths=PackedStringArray("grow_text", "gameover_text", "win_text", "right_wall_collider", "GrowBar", "BossBar", "PlayerBar")]
script = ExtResource("1_ud67y")
grow_text = NodePath("CanvasLayer/GrowText")
gameover_text = NodePath("CanvasLayer/GameOverText")
win_text = NodePath("CanvasLayer/WinText")
right_wall_collider = NodePath("Walls/RightWall/CollisionShape2D")
power_unlocked = 2
title_toshow = 1
next_scene = "res://Scenes/Levels/GodzillaFight.tscn"
GrowBar = NodePath("CanvasLayer/GrowBar")
BossBar = NodePath("CanvasLayer/Boss_HPBar")
PlayerBar = NodePath("CanvasLayer/Player_HPBar")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_biu23")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player_HPBar" parent="CanvasLayer" instance=ExtResource("3_cact6")]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 20.0

[node name="Boss_HPBar" parent="CanvasLayer" instance=ExtResource("3_cact6")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 20.0
grow_horizontal = 0
maxHP = 300

[node name="GrowBar" parent="CanvasLayer" instance=ExtResource("4_7k25r")]
offset_left = 12.0
offset_top = 27.0
offset_right = 309.0
offset_bottom = 37.0
maxHP = 5

[node name="GrowText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 11.0
offset_top = 45.0
offset_right = 315.0
offset_bottom = 83.0
size_flags_horizontal = 4
theme = SubResource("Theme_7k74m")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]G to [rainbow freq=1.0 sat=0.8 val=0.8][wave amp=50.0 freq=5.0 connected=1][pulse freq=1.0 color=#ffffff40 ease=-2.0]GROW"

[node name="WinText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 12.0
offset_top = 54.0
offset_right = 312.0
offset_bottom = 127.0
size_flags_horizontal = 4
theme = SubResource("Theme_4tts6")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]New Power:
Press 'S' in air to slam![/center]"

[node name="GameOverText" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 12.0
offset_top = 54.0
offset_right = 312.0
offset_bottom = 127.0
size_flags_horizontal = 4
theme = SubResource("Theme_1rxdi")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]KO...[/center]"

[node name="Arrow" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(279.847, 65.15)
scale = Vector2(0.179579, 0.201695)
texture = ExtResource("5_pmhgb")
script = ExtResource("6_n51mo")

[node name="Timer" type="Timer" parent="CanvasLayer/Arrow"]
wait_time = 0.5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = 1
material = SubResource("ShaderMaterial_okhwt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_1t5nq")
}

[node name="BossName" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(156, 94)
texture = ExtResource("9_3u4yf")
region_enabled = true
region_rect = Rect2(20, 26, 179, 61)

[node name="BossKanji" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(156, 94)
texture = ExtResource("9_3u4yf")
region_enabled = true
region_rect = Rect2(200, 20, 202, 72)

[node name="Walls" type="Node2D" parent="."]

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-1, 167)
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(0, 1.5)
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_ulv0b")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(201, -97)
scale = Vector2(0.240002, 8.92)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_ulv0b")

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(-201, -94)
scale = Vector2(0.240002, 8.92)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_ulv0b")

[node name="Player" parent="." instance=ExtResource("9_gmrbk")]
position = Vector2(-100, 0)
jump_impulse = 600.0

[node name="Gorilla" parent="." instance=ExtResource("10_dc7cp")]
position = Vector2(100, 0)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)
script = ExtResource("11_30gjy")

[node name="ExitLevelTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitLevelTrigger"]
position = Vector2(214, -18)
shape = SubResource("RectangleShape2D_se114")

[node name="TitleAnimator" parent="." instance=ExtResource("12_2w3it")]

[node name="Sound" type="Node2D" parent="."]

[node name="GongLow" type="AudioStreamPlayer2D" parent="Sound"]
visible = false
stream = ExtResource("14_x4213")

[node name="GongHigh" type="AudioStreamPlayer2D" parent="Sound"]
visible = false
stream = ExtResource("15_v7h4m")

[connection signal="BarEmpty" from="CanvasLayer/Player_HPBar" to="." method="_on_player_hp_bar_empty"]
[connection signal="BarEmpty" from="CanvasLayer/Boss_HPBar" to="." method="_on_boss_hp_bar_empty"]
[connection signal="BarEmpty" from="CanvasLayer/Boss_HPBar" to="CanvasLayer/Arrow" method="toggle_visibility"]
[connection signal="BarFull" from="CanvasLayer/GrowBar" to="." method="_on_grow_bar_full"]
[connection signal="timeout" from="CanvasLayer/Arrow/Timer" to="CanvasLayer/Arrow" method="toggle_visibility"]
[connection signal="on_take_damage" from="Player" to="CanvasLayer/Player_HPBar" method="_on_damage_received"]
[connection signal="body_entered" from="ExitLevelTrigger" to="." method="_on_exit_level_trigger_body_entered"]
